-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.3, 6.4.0 FF
-
-
833f83f270 (qt/qtdeclarative/dev) 833f83f270 (qt/tqtc-qtdeclarative/dev) d72f98dc8b (qt/tqtc-qtdeclarative/6.2) 30e3d19581 (qt/qtdeclarative/6.3) c6b6d93325 (qt/qtdeclarative/6.4) 30e3d19581 (qt/tqtc-qtdeclarative/6.3)
Reproducible on Windows with Qt 6.2.3
ListView has "empty content" visible when app Window is restored down.
Steps to reproduce:
1. Build and run the attached example project with Qt 6.2.3
2. Maximize app window
3. scroll the list all the way to bottom and back to top so that the header is fully visible again
4. Restore down the app window
Please note, may take a few tries issue to appear.
Expected: Header should be positioned close to top border of window
Actual behavior: some "empty space" is visible above the ListView
This behaves correctly if header is not used.
- relates to
-
QTBUG-47151 [reg 5.4->5.5] ListView behaves incorrect after flick: current item becomes hidden and keyboard scrolling buggy
-
- Closed
-
-
QTBUG-56075 QML Flickable: high-precision trackpad scrolling is too fast
-
- Closed
-
-
QTBUG-80720 More controls for touchpad scrolling. Stopping Flickable extra scrolling.
-
- Closed
-
-
QTBUG-82565 Scrolling QML views with mouse wheel or touchpad is quite bad
-
- Closed
-
-
QTBUG-38570 QtQuick scrolling behavior erratic with XInput2 high-precision scrolling
-
- Closed
-
-
QTBUG-101266 Changing ListView.header height dynamically doesn't preserve relative scrollbar position when window is Maximized
-
- Closed
-
| For Gerrit Dashboard: QTBUG-101268 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 409386,9 | WIP debug; maybe get fixup() to happen more reliably after ListView resize | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
| 410768,15 | Flickable: Fix edge hitting detection when the extent is fractional | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 412840,1 | WIP debug; yet another ListView autotest, hammering with wheel events | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
| 417113,2 | Flickable: Fix edge hitting detection when the extent is fractional | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 417114,2 | Flickable: Fix edge hitting detection when the extent is fractional | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 417115,1 | Flickable: Fix edge hitting detection when the extent is fractional | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |
| 417116,2 | Flickable: Fix edge hitting detection when the extent is fractional | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |